temporary overflow fix

--- a/css/doi.css
+++ b/css/doi.css
@@ -28,7 +28,8 @@
   width: 250px;
 }
 .text_elements{
-  height: 175px;
+  height: 120px;
+  overflow: hidden;
 }
 
 .not_found{
